Fix succession column on small screens.

--- a/src/components/Listing/ListingItem.scss
+++ b/src/components/Listing/ListingItem.scss
@@ -47,4 +47,13 @@
       writing-mode: lr;
     }
   }
+
+  &__max-width-cell {
+    max-width: 300px;
+
+    @media only screen and (max-width: 760px),
+      (min-device-width: 768px) and (max-device-width: 1024px) {
+      max-width: unset;
+    }
+  }
 }
